--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         <a href="https://wa.me/seunumero?text=Olá%20Zap" class="btn">WhatsApp</a>
         <a href="https://instagram.com/seuinstagram" class="btn">Instagram</a>
         <a href="https://facebook.com/seufacebook" class="btn">Facebook</a>
-        <a href="https://ecdiversoes.github.io/catalogo/" class="btn">CatÃ¡logo karaokÃª</a> 
+        <a href="https://ecdiversoes.github.io/catalogo/" class="btn">Catalogo Karaoke</a> 
         <a href="https://wa.me/seunumero?text=Quero%20ver%20produtos" class="btn">Produtos</a>
     </div>
 
