--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         <a href="https://instagram.com/seuinstagram" class="btn">Instagram</a>
         <a href="https://facebook.com/seufacebook" class="btn">Facebook</a>
         <a href="https://ecdiversoes.github.io/" class="btn">Catalogo Karaoke</a> 
-        <a href="https://wa.me/seunumero?text=Quero%20ver%20produtos" class="btn">Produtos</a>
+        <a href="https://wa.me/c/5522996112625" class="btn">Produtos</a>
     </div>
 
     <div class="footer">
