--- a/index.html
+++ b/index.html
@@ -1,12 +1,9 @@
 <!DOCTYPE html>
-<html lang="pt-BR"> 
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
-	<link rel="icon" href="./favicon.ico" type="image/x-icon">
-	<!-- Estilos -->
+    <link rel="icon" href="./favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="styles.css">
-    
-    <!-- Fontes -->
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Meu Site Mobile</title>
@@ -19,7 +16,7 @@
             background-size: cover;
             background-position: center;
             color: white;
-            font-family: Arial, sans-serif;
+            font-family: 'Roboto', Arial, sans-serif;
         }
 
         .header {
@@ -33,6 +30,15 @@
             width: 50px;
             height: 50px;
             margin-right: 15px;
+        }
+
+        .header h1 {
+            margin-bottom: 5px;
+        }
+
+        .header h2 {
+            margin-top: 5px;
+            font-size: 1rem;
         }
 
         .content {
@@ -56,6 +62,7 @@
             box-shadow: 0 2px 5px rgba(0,0,0,0.3); 
             transition: transform 0.2s;
             width: 80%;
+            max-width: 300px;
         }
 
         .btn:hover {
@@ -74,16 +81,19 @@
 </head>
 <body>
     <div class="header">
-        <img src="icone.png" alt="Logo"> <!-- Substitua pelo seu ícone -->
-        <h2>EC DIVERSÃ•ES - LocaÃ§Ãµes de brinquedos e karaokÃªs para festas</h2>
+        <img src="icone.png" alt="Logo EC Diversões"> <!-- Substitua pelo seu ícone -->
+        <div>
+            <h1>EC DIVERS&Otilde;ES</h1>
+            <h2>Loca&ccedil;&otilde;es de brinquedos e karaok&ecirc; para festas</h2>
+        </div>
     </div>
 
     <div class="content">
-        <a href="https://wa.me/seunumero?text=Olá%20Zap" class="btn">WhatsApp</a>
-        <a href="https://instagram.com/seuinstagram" class="btn">Instagram</a>
-        <a href="https://facebook.com/seufacebook" class="btn">Facebook</a>
-        <a href="https://ecdiversoes.github.io/" class="btn">Catalogo Karaoke</a> 
-        <a href="https://wa.me/c/5522996112625" class="btn">Produtos</a>
+        <a href="https://wa.me/5511999999999?text=Olá%20Zap" class="btn" aria-label="WhatsApp">WhatsApp</a>
+        <a href="https://instagram.com/ec_diversoes" class="btn" aria-label="Instagram">Instagram</a>
+        <a href="https://facebook.com/ec_diversoes" class="btn" aria-label="Facebook">Facebook</a>
+        <a href="https://ec_diversoes.com/catalogo" class="btn" aria-label="Catálogo Karaokê">Catálogo Karaokê</a>
+        <a href="https://wa.me/5511999999999?text=Quero%20ver%20produtos" class="btn" aria-label="Produtos">Produtos</a>
     </div>
 
     <div class="footer">
