--- a/index.html
+++ b/index.html
@@ -92,22 +92,16 @@
 
     <div class="content">
         <a href="https://wa.me/5511999999999?text=Olá%20Zap" class="btn" aria-label="WhatsApp">WhatsApp</a>
-        <a href="https://github.com/settings/tokenshttps://github.com/settings/tokens" class="btn" aria-label="Instagram">Instagram</a>
-        <a href="https://github.com/settings/tokens" class="btn" aria-label="Facebook">Facebook</a>
-        <a href="https://github.com/settings/tokens" class="btn" aria-label="Catálogo Karaokê">Catálogo Karaokê</a>
-        <a href="https://github.com/settings/tokens" class="btn" aria-label="Produtos">Produtos</a>
+        <a href="https://instagram.com/ec_diversoes" class="btn" aria-label="Instagram">Instagram</a>
+        <a href="https://facebook.com/ec_diversoes" class="btn" aria-label="Facebook">Facebook</a>
+        <a href="https://ec_diversoes.com/catalogo" class="btn" aria-label="Catálogo Karaokê">Catálogo Karaokê</a>
+        <a href="https://wa.me/5511999999999?text=Quero%20ver%20produtos" class="btn" aria-label="Produtos">Produtos</a>
     </div>
 
     <div class="footer">
         <p>&copy; 2025 esiocosta16@gmail.com</p>
     </div>
 
-    <script>
-        // Bloqueia a rolagem com JavaScript (adicione se necessário)
-        document.body.style.overflow = 'hidden';
-        window.addEventListener('scroll', function() {
-            window.scrollTo(0, 0);
-        });
-    </script>
+    
 </body>
 </html>
