--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         <a href="https://wa.me/5522996112625?text=Ol%C3%A1%2520Zap" class="btn" aria-label="Instagram">Instagram</a>
         <a href="https://wa.me/5522996112625?text=Ol%C3%A1%2520Zap" class="btn" aria-label="Facebook">Facebook</a>
         <a href="https://wa.me/5522996112625?text=Ol%25C3%25A1%252520Zap" class="btn" aria-label="Catálogo Karaokê">Catálogo Karaokê</a>
-        <a href="texte" class="btn" aria-label="Produtos">Produtos</a>
+        <a href="https://wa.me/5522996112625?text=Ol%25C3%25A1%252520Zap" class="btn" aria-label="Produtos">Produtos</a>
     </div>
 
     <div class="footer">
