--- a/index.html
+++ b/index.html
@@ -91,11 +91,11 @@
     </div>
 
     <div class="content">
-        <a href="link_aqui" class="btn" aria-label="WhatsApp">WhatsApp</a>
-        <a href="link_aqui" class="btn" aria-label="Instagram">Instagram</a>
-        <a href="link_aqui" class="btn" aria-label="Facebook">Facebook</a>
-        <a href="link_aqui" class="btn" aria-label="Catálogo Karaokê">Catálogo Karaokê</a>
-        <a href="link_aqui" class="btn" aria-label="Produtos">Produtos</a>
+        <a href="https://wa.me/5511999999999?text=Olá%20Zap" class="btn" aria-label="WhatsApp">WhatsApp</a>
+        <a href="https://instagram.com/ec_diversoes" class="btn" aria-label="Instagram">Instagram</a>
+        <a href="https://facebook.com/ec_diversoes" class="btn" aria-label="Facebook">Facebook</a>
+        <a href="https://ec_diversoes.com/catalogo" class="btn" aria-label="Catálogo Karaokê">Catálogo Karaokê</a>
+        <a href="https://wa.me/5511999999999?text=Quero%20ver%20produtos" class="btn" aria-label="Produtos">Produtos</a>
     </div>
 
     <div class="footer">
