--- a/index.html
+++ b/index.html
@@ -91,11 +91,11 @@
     </div>
 
     <div class="content">
-        <a href="TEXTE" class="btn" aria-label="WhatsApp">WhatsApp</a>
-        <a href="https://instagram.com/ec_diversoes" class="btn" aria-label="Instagram">Instagram</a>
-        <a href="https://facebook.com/ec_diversoes" class="btn" aria-label="Facebook">Facebook</a>
+        <a href="https://wa.me/5522996112625" class="btn" aria-label="WhatsApp">WhatsApp</a>
+        <a href="https://www.instagram.com/eclocacoes?igsh=anR3ZmxtMjk1c296/" class="btn" aria-label="Instagram">Instagram</a>
+        <a href="https://www.facebook.com/AerDivercoes/" class="btn" aria-label="Facebook">Facebook</a>
         <a href="https://ec_diversoes.com/catalogo" class="btn" aria-label="Catálogo Karaokê">Catálogo Karaokê</a>
-        <a href="https://wa.me/5511999999999?text=Quero%20ver%20produtos" class="btn" aria-label="Produtos">Produtos</a>
+        <a href="https://wa.me/c/5522996112625?text=Quero%20ver%20produtos" class="btn" aria-label="Produtos">Produtos</a>
     </div>
 
     <div class="footer">
