Atualizar links no index.html

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     </div>
 
     <div class="content">
-        <a href="https://wa.me/5522996114444?text=Ol%C3%A1%2520Zap" class="btn" aria-label="WhatsApp">WhatsApp</a>
+        <a href="https://wa.me/5522996114444" class="btn" aria-label="WhatsApp">WhatsApp</a>
         <a href="https://www.instagram.com/eclocacoes?igsh=anR3ZmxtMjk1c296/" class="btn" aria-label="Instagram">Instagram</a>
         <a href="https://www.facebook.com/AerDivercoes/" class="btn" aria-label="Facebook">Facebook</a>
         <a href="https://ecdiversoes.github.io/catalogo/" class="btn" aria-label="Catálogo Karaokê">Catálogo Karaokê</a>
