--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
 
     <div class="content">
         <a href="https://wa.me/5522996112625?text=Ol%C3%A1%2520Zap" class="btn" aria-label="WhatsApp">WhatsApp</a>
-        <a href="https://www.instagram.com/eclocacoes2?igsh=anR3ZmxtMjk1c296/" class="btn" aria-label="Instagram">Instagram</a>
-        <a href="https://www.facebook.com/AerDivercoes/" class="btn" aria-label="Facebook">Facebook</a>
+        <a href="https://www.instagram.com/eclocacoes?igsh=anR3ZmxtMjk1c296/" class="btn" aria-label="Instagram">Instagram</a>
+        <a href="https://www.facebook.com/AerDivercoes/3" class="btn" aria-label="Facebook">Facebook</a>
         <a href="https://ecdiversoes.github.io/catalogo2/" class="btn" aria-label="Catálogo Karaokê">Catálogo Karaokê</a>
         <a href="https://wa.me/c/5522996112625?text=Quero%252520ver%252520produtos" class="btn" aria-label="Produtos">Produtos</a>
     </div>
