--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="icon" href="./favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css?v=1741283202">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Meu Site Mobile</title>
@@ -91,7 +91,7 @@
     </div>
 
     <div class="content">
-        <a href="nada?text=Ol%C3%A1%2C%20gostaria%20de%20mais%20informa%C3%A7%C3%B5es%20sobre%20aluguel" class="btn" aria-label="WhatsApp">WhatsApp</a>
+        <a href="sempre?text=Ol%C3%A1%2C%20gostaria%20de%20mais%20informa%C3%A7%C3%B5es%20sobre%20aluguel" class="btn" aria-label="WhatsApp">WhatsApp</a>
         <a href="https://www.instagram.com/eclocacoes?igsh=anR3ZmxtMjk1c296/" class="btn" aria-label="Instagram">Instagram</a>
         <a href="https://www.facebook.com/AerDivercoes/" class="btn" aria-label="Facebook">Facebook</a>
         <a href="https://ecdiversoes.github.io/catalogo/" class="btn" aria-label="Catálogo Karaokê">Catálogo Karaokê</a>
