--- a/index.html
+++ b/index.html
@@ -7,79 +7,80 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Meu Site Mobile</title>
-    <style>
-        body {
-            margin: 0;
-            padding: 0;
-            height: 100vh;
-            background-image: url('background.jpg'); /* Substitua pelo seu caminho da imagem */
-            background-size: cover;
-            background-position: center;
-            color: white;
-            font-family: 'Roboto', Arial, sans-serif;
-            overflow: hidden; /* Bloqueia a rolagem */
-            overscroll-behavior-y: contain; /* Bloqueia o pull-to-refresh */
-        }
+   <style>
+    body {
+        margin: 0;
+        padding: 0;
+        height: 100vh;
+        background-image: url('background.jpg'); /* Substitua pelo seu caminho da imagem */
+        background-size: cover;
+        background-position: center;
+        color: white;
+        font-family: 'Roboto', Arial, sans-serif;
+        /* Remova ou comente as linhas abaixo para permitir a rolagem e o pull-to-refresh */
+        /* overflow: hidden; */ /* Bloqueia a rolagem */
+        /* overscroll-behavior-y: contain; */ /* Bloqueia o pull-to-refresh */
+    }
 
-        .header {
-            display: flex;
-            align-items: center;
-            padding: 20px;
-            background: rgba(0,0,0,0.5);
-        }
+    .header {
+        display: flex;
+        align-items: center;
+        padding: 20px;
+        background: rgba(0,0,0,0.5);
+    }
 
-        .header img {
-            width: 50px;
-            height: 50px;
-            margin-right: 15px;
-        }
+    .header img {
+        width: 50px;
+        height: 50px;
+        margin-right: 15px;
+    }
 
-        .header h1 {
-            margin-bottom: 5px;
-        }
+    .header h1 {
+        margin-bottom: 5px;
+    }
 
-        .header h2 {
-            margin-top: 5px;
-            font-size: 1rem;
-        }
+    .header h2 {
+        margin-top: 5px;
+        font-size: 1rem;
+    }
 
-        .content {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            height: 50vh;
-            text-align: center;
-        }
+    .content {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        height: 50vh;
+        text-align: center;
+    }
 
-        .btn {
-            background: gold;
-            border: none;
-            padding: 15px 30px;
-            margin: 10px;
-            border-radius: 25px;
-            text-decoration: none;
-            color: #333;
-            font-weight: bold;
-            box-shadow: 0 2px 5px rgba(0,0,0,0.3); 
-            transition: transform 0.2s;
-            width: 80%;
-            max-width: 300px;
-        }
+    .btn {
+        background: gold;
+        border: none;
+        padding: 15px 30px;
+        margin: 10px;
+        border-radius: 25px;
+        text-decoration: none;
+        color: #333;
+        font-weight: bold;
+        box-shadow: 0 2px 5px rgba(0,0,0,0.3); 
+        transition: transform 0.2s;
+        width: 80%;
+        max-width: 300px;
+    }
 
-        .btn:hover {
-            transform: scale(1.05);
-        }
+    .btn:hover {
+        transform: scale(1.05);
+    }
 
-        .footer {
-            padding: 15px;
-            background: rgba(0,0,0,0.5);
-            text-align: center;
-            position: fixed;
-            bottom: 0;
-            width: 100%;
-        }
-    </style>
+    .footer {
+        padding: 15px;
+        background: rgba(0,0,0,0.5);
+        text-align: center;
+        position: fixed;
+        bottom: 0;
+        width: 100%;
+    }
+</style>
 </head>
 <body>
     <div class="header">
